# CubingNav

./: .gitignore  Cargo.toml
python/: cube_set.py  datagen.py  dataset.py  export_model.py  main.py  model.py  models.py  soap.py
src/: cube_state.rs
src/cube/: algorithm.rs  cube_color.rs  cube_const.rs  cube_face.rs  cube_holder.rs  cube_mask.rs  cube_move.rs  cube_state.rs  cube_state_const.rs  cube_state_display.rs  cube_state_sym.rs  cube_view.rs  mod.rs  rel_cube_face.rs  turn_dir.rs
src/ml/: ml_model.rs  ml_solve_db.rs  ml_state.rs  mod.rs
src/solve/: algorithm.rs  methods.rs  mod.rs  pattern_db.rs  saved_pattern_dbs.rs  search.rs
src/util/: mod.rs  vec3i.rs
