[package]
name = "CubeSolver"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.2", features=["derive"] }
strum_macros = "0.27.2"
colored = "3.0.0"
binary-heap-plus = "0.5.0"
rand = "0.9.2"
ndarray = "0.15.1"
ndarray-npy = "0.8.1"
rayon = "1.11.0"
ort = { version = "1.16.3", features = ["download-binaries", "load-dynamic"] }
